# Rays

./: CMakeLists.txt  cmd.txt  main.cpp
images/: sphere1.ppm  sphere2.ppm  sphere3.ppm
include/: ray.h  scene.h  transformations.h  utils.h  vec.h  viewport.h  world.h
src/: ray.cpp  scene.cpp  transformations.cpp  utils.cpp  vec.cpp  viewport.cpp  world.cpp
